--- a/style.css
+++ b/style.css
@@ -587,7 +587,7 @@
                                     outline: none;
                                 }
                                 
-                                .form-container .btn {
+                                .form-container .btn-chat {
                                     background-color: #4CAF50;
                                     color: white;
                                     padding: 16px 20px;
